# HCCL

./: PULL_REQUEST_TEMPLATE.zh-CN.md  README.en.md  README.md  bb  build.sh  test.py  version.info
src/domain/collective_communication/algorithm/base/communicator/: CMakeLists.txt  calc_hd_transport_req.cc  calc_mesh_transport_req.cc  calc_p2p_transport_req.cc  calc_partial_mesh_transport_req.cc  calc_ring_transport_req.cc  calc_transport_req_base.cc  comm_base.cc  comm_factory.cc  comm_factory_pub.h  comm_p2p.cc  comm_ring.cc  comm_star.cc  search_path.h  topo_info_extractor.cc  topo_info_extractor.h
src/domain/collective_communication/algorithm/impl/: CMakeLists.txt  alg_configurator.cc  alg_configurator.h  coll_alg_param.h  coll_alg_utils.cc  coll_alg_utils.h  executor_impl.h  hccl_alg.cc  hccl_alg.h  hccl_impl.cc  hccl_impl.h  topo_matcher.cc  topo_matcher.h
src/domain/collective_communication/algorithm/impl/coll_executor/: CMakeLists.txt  coll_comm_executor.cc  coll_comm_executor.h  coll_executor_base.cc  coll_executor_base.h  coll_native_executor_base.cc  coll_native_executor_base.h
src/domain/collective_communication/algorithm/impl/inc/: coll_alg_param.h  common.h  ffts_common_pub.h
src/domain/collective_communication/algorithm/impl/legacy/: CMakeLists.txt  executor_impl.h  hccl_impl.cc  hccl_impl.h  hccl_impl_pub.h
src/domain/collective_communication/algorithm/impl/operator/: CMakeLists.txt  all_gather_operator.cc  all_gather_operator.h  all_reduce_operator.cc  all_reduce_operator.h  alltoall_operator.cc  alltoall_operator.h  batchsendrecv_operator.cc  batchsendrecv_operator.h  broadcast_operator.cc  broadcast_operator.h  coll_alg_operator.cc  (+17 more)
(+498 files in other folders)
